--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "CommonUtils"
+name = "Common-Utils"
 version = "2024.0"
 dynamic = ["dependencies"]
 requires-python = "==3.12.3"
