--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "Common-Utils"
-version = "2025.6.3"
-dynamic = ["dependencies"]
+dynamic = ["dependencies","version"]
 requires-python = "==3.12.3"
 
 [tool.setuptools.dynamic]
 dependencies = { file = ["requirements.txt"] }
+
+[tool.setuptools_scm]
+version_file = "src/common_utils/_version.py"
