--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
+PyPDF2==3.0.1
 six==1.17.0
 setuptools-scm==8.1.0
 duckdb==1.3.2
