--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
+duckdb==1.3.2
 numpy==2.2.1
 pandas==2.2.3
+pre-commit==4.3.0
+psycopg2==2.9.10
+PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
-PyPDF2==3.0.1
-six==1.17.0
-setuptools-scm==8.1.0
-duckdb==1.3.2
 requests==2.32.5
-sqlparse==0.5.3
+ruff==0.13.2
+setuptools-scm==8.1.0
+six==1.17.0
 SQLAlchemy==2.0.43
-psycopg2==2.9.10
+sqlparse==0.5.3
