--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy==2.2.1
 pandas==2.2.3
 pre-commit==4.3.0
 psycopg2==2.9.10
-PyPDF2==3.0.1
+pypdf==6.4.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
