--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 beautifulsoup4==4.14.2
-duckdb==1.3.2
+# duckdb==1.3.2
 numpy==2.2.1
 pandas==2.2.3
 pre-commit==4.3.0
 psycopg2==2.9.10
 pypdf==6.4.0
+pytest==9.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
